--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,7 @@ plugins:
   - jekyll-assets
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-seo-tag
   - jemoji
 paginate_path: /posts/page/:num/
 permalink: posts/:slug
