--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,28 @@
 sudo: false
 
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+    - LC_ALL=en_US.UTF-8
+    - JEKYLL_ENV=production
+
 # version automatically picked up from .ruby-version
 language: ruby
 cache: bundler
 
+rvm:
+  - 2.5.3
 before_install:
   - gem update --system
   - gem install bundler jekyll
+  - . $HOME/.nvm/nvm.sh
+  - nvm install stable
+  - nvm use stable
+  - npm install -g yarn
+install:
+  - bundle check || bundle install
+  - bundle update
+  - yarn install --modules-folder ./_assets/yarn
 
 before_script:
   - chmod +x ./bin/setup
@@ -15,9 +31,11 @@ before_script:
 
 script: bundle exec htmlproofer ./_site --only-4xx --allow-hash-href --assume-extension --check-opengraph --url-ignore "feed.xml,/facebook.com/"
 
-env:
-  global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-    - LC_ALL=en_US.UTF-8
-    - JEKYLL_ENV=production
-
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: _site
+  target_branch: master
+  on:
+    branch: dev-branch
