--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 blog_theme: light # Or use dark
 name: Kenneth's BLOG
 paginate: 2
-url: http://whatis.vip
+url: http://blog.whatis.vip
 
 
 # Optional settings
