--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ rvm:
   - 2.5.3
 before_install:
   - gem update --system
+  - gem update bundler
   - gem install bundler jekyll
   - . $HOME/.nvm/nvm.sh
   - nvm install stable
