--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 blog_theme: light # Or use dark
 name: Kenneth's BLOG
-paginate: 2
+paginate: 8
 url: http://blog.whatis.vip
 
 
@@ -14,7 +14,7 @@ ga_analytics: UA-158051681-1 # Add your GA Tracking Id
 local_fonts: false # Change to true if you wish to use local fonts
 rss_enabled: true # Change to false if not
 scrollappear_enabled: true # Change to false to disable
-tag_nav_enabled: false # Change to true if you wish to show an additional 'tag-list' navigation below the header
+tag_nav_enabled: true # Change to true if you wish to show an additional 'tag-list' navigation below the header
 theme_toggle: true # Change to true if you wish to show an icon in the navigation for dynamic theme toggling
 social:
   dribbble: # nielsenramon # Add your Dribbble handle
