--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll_image_encode
   - jemoji
 paginate_path: /posts/page/:num/
 permalink: posts/:slug
