--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,13 @@ install:
 before_script:
   - chmod +x ./bin/setup
   - ./bin/setup
-  - bundle exec jekyll build
+  - sudo bundle exec jekyll build
 
-script: bundle exec htmlproofer ./_site --only-4xx --allow-hash-href --assume-extension --check-opengraph --url-ignore "feed.xml,/facebook.com/"
+script: sudo bundle exec htmlproofer ./_site --only-4xx --allow-hash-href --assume-extension --check-opengraph --url-ignore "feed.xml,/facebook.com/"
 
 deploy:
   provider: pages
-  skip_cleanup: true
+  skip_cleanup: false
   github_token: $GITHUB_TOKEN
   local_dir: _site
   target_branch: master
