--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@ install:
   - bundle update
   - yarn install --modules-folder ./_assets/yarn
 
-before_script:
-  - chmod +x ./bin/setup
-  - ./bin/setup
+#before_script:
+#  - chmod +x ./bin/setup
+#  - ./bin/setup
   - bundle exec jekyll build
 
 script: bundle exec htmlproofer ./_site --only-4xx --allow-hash-href --assume-extension --check-opengraph --url-ignore "feed.xml,/facebook.com/"
