--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
   - bundle update
   - yarn install --modules-folder ./_assets/yarn
 
-#before_script:
+before_script:
 #  - chmod +x ./bin/setup
 #  - ./bin/setup
   - bundle exec jekyll build
