change the ci cfg

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,11 +28,10 @@ install:
   - yarn install --modules-folder ./_assets/yarn
 
 before_script:
-#  - chmod +x ./bin/setup
-#  - ./bin/setup
-  - bundle exec jekyll build
+  - chmod +x ./bin/setup
+  - ./bin/setup
 
-script: bundle exec htmlproofer ./_site --only-4xx --allow-hash-href --assume-extension --check-opengraph --url-ignore "feed.xml,/facebook.com/"
+script: bundle exec htmlproofer ./_site --only-4xx --allow-hash-href --assume-extension --check-opengraph --url-ignore "feed.xml,/facebook.com/" --disable-external
 
 deploy:
   provider: pages
