--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ social:
   flickr: # Add your Flickr handle
   github: # heisken # Add your GitHub handle
   linkedin: # Add your LinkedIn handle
-  twitter: # Add your Twitter handle
+  twitter: heiskkk # Add your Twitter handle
   email: flyingswon@gmail.com # Add your Email address
   bitcoin: # Add your Bitcoin link or address
   ethereum: # Add your Ethereum link or address
